# bfportal-grpc

./: .gitignore  Dockerfile  Readme.md  index.d.ts  index.js  package-lock.json  package.json  pyproject.toml  test.json  tsconfig.json
.github/workflows/: npm-publish.yml
bfportal_grpc/: __init__.py  access_token.py  compile.py
bfportal_grpc/helpers/: compile.py
bfportal_grpc/proto/: authentication_pb2.py  authentication_pb2.pyi  authentication_pb2_grpc.py  communitygames_pb2.py  communitygames_pb2.pyi  communitygames_pb2_grpc.py  localization_pb2.py  localization_pb2.pyi  localization_pb2_grpc.py  reporting_pb2.py  reporting_pb2.pyi  reporting_pb2_grpc.py
bfportal_grpc_python/: access_token.py
bfportal_grpc_python/proto/: authentication_pb2.py  authentication_pb2_grpc.py  communitygames_pb2.py  localization_pb2.py  localization_pb2_grpc.py  reporting_pb2.py  reporting_pb2_grpc.py
proto/: authentication.proto  communitygames.proto  localization.proto  reporting.proto
src/: index.d.ts  index.js  index.ts
src/grpc-web/proto/: authentication_pb.js  communitygames_grpc_web_pb.js  communitygames_pb.d.ts  localization_grpc_web_pb.d.ts  localization_grpc_web_pb.js  localization_pb.d.ts  localization_pb.js  reporting_grpc_web_pb.d.ts  reporting_grpc_web_pb.js  reporting_pb.js
src/proto/: AuthenticationServiceClientPb.ts  CommunitygamesServiceClientPb.ts  LocalizationServiceClientPb.ts  ReportingServiceClientPb.ts  authentication_grpc_web_pb.d.ts  authentication_grpc_web_pb.js  authentication_pb.d.ts  authentication_pb.js  communitygames_grpc_web_pb.d.ts  communitygames_grpc_web_pb.js  communitygames_pb.d.ts  communitygames_pb.js  localization_grpc_web_pb.d.ts  localization_grpc_web_pb.js  localization_pb.d.ts  localization_pb.js  reporting_grpc_web_pb.d.ts  reporting_grpc_web_pb.js  reporting_pb.d.ts  reporting_pb.js
test/: BfPortal.test.ts  communityGames.test.ts  config.ts
testing/: index.ts
tests/: conftest.py  test_communitygames.py  test_localization.py
